# soilar-examples

./: .gitmodules  CMakeLists.txt  README.md  check  clean  platformio.ini  run
src/: CMakeLists.txt  main.cpp
